tests/fail/DoubleLiteral.java
package fail;

import java.lang.System;

public class DoubleLiteral {

  public static void main(String[] args ) {
    String notANumber = "hi";
    double notANumber;
  }

}
